--- a/common/lib/ScannedDoc/unit_test/makefile.inc
+++ b/common/lib/ScannedDoc/unit_test/makefile.inc
@@ -1,4 +1,4 @@
 SCANNED_DOC_UT_CPP_SRC = $(wildcard $(SCANNEDDOC_DIR)/unit_test/*.cpp)
 SCANNED_DOC_UT_CPP_FLAGS = -I$(SCANNEDDOC_DIR)
 
-$(eval $(call OSX_UT,osx_scanned_doc_ut,scanned_doc_ut,,,$(SCANNED_DOC_UT_CPP_SRC),$(SCANNED_DOC_UT_CPP_FLAGS)))
+$(eval $(call OSX_UT,scanned_doc_ut,scanned_doc_ut,,,$(SCANNED_DOC_UT_CPP_SRC),$(SCANNED_DOC_UT_CPP_FLAGS)))
