--- a/common/lib/ScannedDoc/makefile.inc
+++ b/common/lib/ScannedDoc/makefile.inc
@@ -1,3 +1,3 @@
-include $(SCANNEDDOC_DIR)/unit_test/makefile.inc 
+# include $(SCANNEDDOC_DIR)/unit_test/makefile.inc 
 include $(SCANNEDDOC_DIR)/unit_test_gt/makefile.inc
 scanned_doc:scanned_doc_ut
